@@ -136,9 +136,9 @@ no-research-all-tech=No thanks
 
 
 show-all-projects=Staged BP projects
-all-projects=Staged BP projects
+all-projects=Projects
 new-project=＋ New project
-exit-project=[virtual-signal=signal-output]Exit project editor
+exit-project=[virtual-signal=signal-output]Exit editor
 button-tooltip=[font=default-bold]Ctrl+left click[/font] to move up\n[font=default-bold]Ctrl+right click[/font] to move down
 
 name=Name:
