@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.8.5
 Date: ????
-  Changes:
+  Gui:
+    - Make the project list slightly slimmer.
 ---------------------------------------------------------------------------------------------------
 Version: 2.8.4
 Date: 2025-11-12
